--- a/docs/makefile
+++ b/docs/makefile
@@ -4,10 +4,14 @@
 .SILENT: ada.sed doc clean
 
 TMPLT	  = demo.tmplt user.tmplt table.tmplt table_section.tmplt \
-	    table_if.tmplt matrix.tmplt table_block.tmplt
+	    table_if.tmplt matrix.tmplt table_block.tmplt table_inline.tmplt \
+	    if_inline.tmplt
+
 TMPLTTEXI = $(TMPLT:=.texi)
+
 ADBFILES  = demo.adb user1.adb user2.adb table.adb table_section.adb \
-	    table_if.adb matrix.adb
+	    table_if.adb matrix.adb table_inline.adb if_inline.adb
+
 EXEFILES  = $(ADBFILES:.adb=.exe)
 ADAFILES  = $(ADBFILES)
 ALIFILES  = $(ADSFILES:.ads=.ali) $(ADBFILES:.adb=.ali)
