--- a/docs/.cvsignore
+++ b/docs/.cvsignore
@@ -3,6 +3,10 @@ demo.adb
 demo.adb.res
 demo.adb.texi
 demo.tmplt.texi
+if_inline.adb
+if_inline.adb.res
+if_inline.adb.texi
+if_inline.tmplt.texi
 matrix.adb
 matrix.adb.res
 matrix.adb.texi
@@ -16,6 +20,10 @@ table_if.adb
 table_if.adb.res
 table_if.adb.texi
 table_if.tmplt.texi
+table_inline.adb
+table_inline.adb.res
+table_inline.adb.texi
+table_inline.tmplt.texi
 table_section.adb
 table_section.adb.res
 table_section.adb.texi
