--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -160,6 +160,9 @@ testme60.res
 testme61.res
 testme62.res
 testme63.res
+testme64.res
+testme64_pt.res
+testme65.res
 testme6_pt.res
 testme7.res
 testme7_pt.res
