--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -163,6 +163,8 @@ testme63.res
 testme64.res
 testme64_pt.res
 testme65.res
+testme66.res
+testme67.res
 testme6_pt.res
 testme7.res
 testme7_pt.res
