(%.adb.res): Do not assume that "." is in the PATH. Fix build failure.

--- a/docs/makefile
+++ b/docs/makefile
@@ -66,13 +66,13 @@ $(ADBFILES) $(ADSFILES): all_sources.ada
 	touch $@
 
 %.adb.res: %.adb %.exe
-	echo "@cartouche"        > $<.res
-	echo "@example"         >> $<.res
-	echo "@group"           >> $<.res
-	`basename $@ .adb.res`  >> $<.res
-	echo "@end group"       >> $<.res
-	echo "@end example"     >> $<.res
-	echo "@end cartouche"   >> $<.res
+	echo "@cartouche"         > $<.res
+	echo "@example"          >> $<.res
+	echo "@group"            >> $<.res
+	./`basename $@ .adb.res` >> $<.res
+	echo "@end group"        >> $<.res
+	echo "@end example"      >> $<.res
+	echo "@end cartouche"    >> $<.res
 
 %.adb.html: %.adb %.exe
 	`basename $@ .adb.html` >> $<.html
