--- a/docs/makefile
+++ b/docs/makefile
@@ -3,6 +3,11 @@
 
 .SILENT: ada.sed doc clean
 
+MAKEINFO        = $(shell which makeinfo 2> /dev/null)
+DVIPS           = $(shell which dvips 2> /dev/null)
+TEXI2DVI        = $(shell which texi2dvi 2> /dev/null)
+PDFTEX          = $(shell which pdftex 2> /dev/null)
+
 TMPLT	  = demo.tmplt user.tmplt table.tmplt table_section.tmplt \
 	    table_if.tmplt matrix.tmplt table_block.tmplt table_inline.tmplt \
 	    if_inline.tmplt
@@ -39,22 +44,70 @@ ALLDEPS = $(ADBFILES) $(ADSFILES) $(EXEFILES) $(TEXIFILES) $(TMPLTTEXI) \
 doc: $(ALLDEPS) $(DOCS)
 
 %.dvi: %.texi
-	-texi2dvi --clean --quiet $<
+ifneq (${TEXI2DVI},)
+	echo Building $@
+	-${TEXI2DVI} --expand --clean --quiet $<
+else
+	@echo "--------------------------------------------------------"
+	@echo "texi2dvi not found, cannot build DVI or PS documentation"
+	@echo "--------------------------------------------------------"
+endif
 
-%.pdf: %.ps
-	-ps2pdf $< $@
+%.pdf: %.texi
+ifneq (${TEXI2DVI},)
+ifneq (${PDFTEX},)
+	echo Building $@
+	${TEXI2DVI} -p --expand --clean --quiet $<
+else
+	@echo "-----------------------------------------------"
+	@echo "pdftex not fond, cannot build PDF documentation"
+	@echo "-----------------------------------------------"
+endif
+else
+	@echo "--------------------------------------------------"
+	@echo "texi2dvi not found, cannot build PDF documentation"
+	@echo "--------------------------------------------------"
+endif
 
 %.ps: %.dvi
-	-dvips -q $< -o $@
+ifneq (${DVIPS},)
+	echo Building $@
+	-${DVIPS} -q $< -o $@
+else
+	@echo "------------------------------------------------------"
+	@echo "dvips not found, cannot build POSTSCRIPT documentation"
+	@echo "------------------------------------------------------"
+endif
 
 %.info: %.texi
-	-makeinfo $<
+ifneq (${MAKEINFO},)
+	echo Building $@
+	-${MAKEINFO} $<
+else
+	@echo "---------------------------------------------------"
+	@echo "makeinfo not found, cannot build INFO documentation"
+	@echo "---------------------------------------------------"
+endif
 
 %.html: %.texi
-	-makeinfo --html --no-split --ifinfo $<
+ifneq (${MAKEINFO},)
+	echo Building $@
+	-${MAKEINFO} --html --no-split --css-include=tp.css --ifinfo $<
+else
+	@echo "---------------------------------------------------"
+	@echo "makeinfo not found, cannot build HTML documentation"
+	@echo "---------------------------------------------------"
+endif
 
 %.txt: %.texi
-	-makeinfo --no-headers $< > $@
+ifneq (${MAKEINFO},)
+	echo Building $@
+	-${MAKEINFO} --plaintext --no-headers $< --output $@
+else
+	@echo "---------------------------------------------------"
+	@echo "makeinfo not found, cannot build TEXT documentation"
+	@echo "---------------------------------------------------"
+endif
 
 $(ADBFILES) $(ADSFILES): all_sources.ada
 	tail +3 all_sources.ada > sources.ada
@@ -66,13 +119,9 @@ $(ADBFILES) $(ADSFILES): all_sources.ada
 	touch $@
 
 %.adb.res: %.adb %.exe
-	echo "@cartouche"         > $<.res
-	echo "@example"          >> $<.res
-	echo "@group"            >> $<.res
+	echo "@TPEXP{"         	  > $<.res
 	./`basename $@ .adb.res` >> $<.res
-	echo "@end group"        >> $<.res
-	echo "@end example"      >> $<.res
-	echo "@end cartouche"    >> $<.res
+	echo "}"		 >> $<.res
 
 %.adb.html: %.adb %.exe
 	`basename $@ .adb.html` >> $<.html
