--- a/docs/makefile
+++ b/docs/makefile
@@ -150,6 +150,7 @@ ada.sed: makefile
 force:
 
 clean-tmp:
+	gnatclean -r -q -Pdocs $(EXEFILES) 
 	-rm -f $(EXEFILES) $(ADAFILES) $(TEXIFILES) *.res *.o *.ali genout \
 		*.aux *.cp* *.fn *.ky *.pg *.toc *.tp *.vr *.dvi *.log *.ps \
 		*.exe templates_parser*.ads.texi ada.sed \
