--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -170,6 +170,9 @@ testme69.res
 testme6_pt.res
 testme7.res
 testme70.res
+testme71.res
+testme72.res
+testme73.res
 testme7_pt.res
 testme8.res
 testme8_pt.res
