* regtests/makefile: Add support for templates2ada testing.
* regtests/t2a.out, regtests/tpl1.tmpl, regtests/tpl2.tmpl:
Templates2ada first non regression test.

* tools/all_urls.thtml, tools/templates.tads,
  tools/templates2ada.adb:
Initial revision.

* templates_parser.gpr:
Add support for building templates2ada tool.
(Ide): Properly set the Vcs_Kind to Subversion.

Work for F505-010.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -15,7 +15,7 @@ TESTS_TREE = testme testme2 testme5 testme6 testme7 testme8 testme11 testme15\
 	testme30 testme31 testme32 testme38 blocks3 blocks4 blocks6 testme53 \
 	testme54 testme59 testme64
 
-STANDALONE_TESTS := test_templates_if testcat testme9_run testme10_run
+STANDALONE_TESTS := test_templates_if testcat testme9_run testme10_run tt2a
 
 ifeq ($(TP_XMLADA), Installed)
 XTESTS			= translations_demo
@@ -34,6 +34,8 @@ EXP_TESTS      = regtst2 regtst3 $(XTESTS)
 MAIN_TESTS     = testme print_tree filter
 
 DIFF_ARGS = -c -w
+
+T2A	= ../bin/templates2ada
 
 ifeq (${OS}, Windows_NT)
 EXE=.exe
@@ -57,6 +59,11 @@ $(EXP_TESTS): force
 	$(GNATMAKE) -q -Pregtests $@ -bargs -E
 	-./$@ > $@.res 2>&1
 	-diff $(DIFF_ARGS) $@.out $@.res >> alldiffs
+
+tt2a: force
+	echo $@
+	$(T2A) -e tmpl -d . -t ../tools/templates.tads -o t2a.res
+	-diff $(DIFF_ARGS) t2a.out t2a.res >> alldiffs
 
 print_tree: force
 	echo $@
