New version of .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,57 @@
+*~
 *.ali
-*.exe
-*.o
 docs/templates_parser.html
 docs/templates_parser.info
 docs/templates_parser.pdf
 docs/templates_parser.txt
-regtests/*.res
+*.exe
+*.o
+obj
 regtests/3l1.tmplt
 regtests/3l2.tmplt
 regtests/3level.tmplt
-regtests/a.tmplt
+regtests/*.ali
 regtests/alldiffs
+regtests/a.tmplt
 regtests/b.tmplt
-regtests/c.tmplt
+regtests/check_mem
 regtests/check_mem.run1
 regtests/check_mem.run2
+regtests/c.tmplt
+regtests/dynamic
+regtests/*.exe
+regtests/filter
 regtests/foot.tmplt
 regtests/gmem.out
 regtests/head.tmplt
 regtests/incl.tmplt
-regtests/m.xml
+regtests/include
+regtests/include2
 regtests/main.tmplt
+regtests/m.xml
+regtests/not_initialized
+regtests/nullset
+regtests/*.o
+regtests/print_tree
+regtests/regtst1
+regtests/regtst2
+regtests/regtst3
+regtests/regtst4
+regtests/*.res
 regtests/run1
 regtests/run2
 regtests/t2a.tmp
+regtests/tag_demo
+regtests/tcache
+regtests/tess
+regtests/testcat
+regtests/testme
+regtests/test_templates_if
+regtests/translations_demo
+regtests/ts_assoc
 regtests/ts.f.xml
-regtests/ts.xml
 regtests/tsr.f.xml
 regtests/tsr.xml
+regtests/ts.xml
+regtests/user_filter
+tp_xmlada.gpr
