Improve building Templates_Parser with project files.
All parts of Templates_Parser are now built using project
files. At the same time the build directory has been
separated from the source one. Support for installing
project file to use the Templates_Parser in stand-alone
mode has been added.
--
Continue work to prepare H417-001.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,29 @@
-*~
 *.ali
+*.exe
+*.o
+*~
+.build
+config/tp_config.gpr
 docs/templates_parser.html
 docs/templates_parser.info
 docs/templates_parser.pdf
 docs/templates_parser.txt
-*.exe
-*.o
 obj
+regtests/*.ali
+regtests/*.exe
+regtests/*.o
+regtests/*.res
 regtests/3l1.tmplt
 regtests/3l2.tmplt
 regtests/3level.tmplt
-regtests/*.ali
-regtests/alldiffs
 regtests/a.tmplt
+regtests/alldiffs
 regtests/b.tmplt
+regtests/c.tmplt
 regtests/check_mem
 regtests/check_mem.run1
 regtests/check_mem.run2
-regtests/c.tmplt
 regtests/dynamic
-regtests/*.exe
 regtests/filter
 regtests/foot.tmplt
 regtests/gmem.out
@@ -27,31 +31,29 @@ regtests/head.tmplt
 regtests/incl.tmplt
 regtests/include
 regtests/include2
-regtests/main.tmplt
 regtests/m.xml
+regtests/main.tmplt
 regtests/not_initialized
 regtests/nullset
-regtests/*.o
 regtests/print_tree
 regtests/regtst1
 regtests/regtst2
 regtests/regtst3
 regtests/regtst4
-regtests/*.res
 regtests/run1
 regtests/run2
 regtests/t2a.tmp
 regtests/tag_demo
 regtests/tcache
 regtests/tess
+regtests/test_templates_if
 regtests/testcat
 regtests/testme
-regtests/test_templates_if
 regtests/translations_demo
-regtests/ts_assoc
 regtests/ts.f.xml
+regtests/ts.xml
+regtests/ts_assoc
 regtests/tsr.f.xml
 regtests/tsr.xml
-regtests/ts.xml
 regtests/user_filter
 tp_xmlada.gpr
