Do not clean after building the documentation.
This is counter-intuitive and make no sense.

--- a/docs/makefile
+++ b/docs/makefile
@@ -180,7 +180,7 @@ ada.sed: makefile
 force:
 
 clean-tmp:
-	-$(GNAT) clean -q -r -Pdocs $(EXEFILES)
+	-$(GNAT) clean -q -Pdocs $(EXEFILES)
 	-rm -f $(EXEFILES) $(ADAFILES) $(TEXIFILES) *.res *.o *.ali genout \
 		*.aux *.cp* *.fn *.ky *.pg *.toc *.tp *.vr *.dvi *.log *.ps \
 		*.exe templates_parser*.ads.texi ada.sed \
