Fix clean-up in AWS context.
When the templates_parser clean targert is called from AWS we do
not want to use projects files that haven't been used. The AWS
context is detected by the mean of the AWS makefile variable which
is set to AWS.
--
Clean target clean-up.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -173,7 +173,9 @@ test_result:
 	test ! -s alldiffs
 
 clean:
+ifeq ($(AWS),)
 	-$(GNAT) clean -Pregtests
+endif
 	-rm -f *.res *.o *.ali b~*.ad[sb] *.exe *~ check_mem.run* run1 run2
 	-rm -f $(ALL_EXEC) gmem.out alldiffs
 	-rm -f ts.xml tsr.xml m.xml ts.f.xml tsr.f.xml
