--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,28 @@
 *~
 .build
 config/tp_config.gpr
+docs/ada.sed
+docs/demo*
+docs/genout
+docs/if_inline*
+docs/matrix*
+docs/table*
+docs/table_if*
+docs/table_inline*
+docs/table_section*
+docs/templates_parser-debug.ads.texi
+docs/templates_parser-utils.ads.texi
+docs/templates_parser-xml.ads.texi
+docs/templates_parser.ads.texi
+docs/templates_parser.dvi
 docs/templates_parser.html
 docs/templates_parser.info
 docs/templates_parser.pdf
+docs/templates_parser.ps
 docs/templates_parser.txt
+docs/user.tmplt.texi
+docs/user1*
+docs/user2*
 makefile.setup
 obj
 regtests/*.ali
